2002-06-02  Tushar Samant <scribble@pobox.com>

	* [w3m-dev-en 00748] PATCH: Reinitialize w3m while running
	* funcname.tab (INIT_MAILCAP): deleted
		(REINIT): added
	* main.c (config_filename): added
		(reinit): added
	* proto.h (reinit): added
	* rc.c (rc_initialized): deleted
	* w3mhelperpanel.c (editMailcap): use REINIT MAILCAP

2002-06-02  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 03200] Re: New configuration option ``keymap_file'' and new command ``DEFINE_KEY''
	* fm.h: add <sts/stat.h>, unistd.h>
	* fm.h (keymap_file): added
	* func.c (keymap_initialized): added
		(current_keymap_file): added
		(setKeymap): added
		(initKeymap): rewrite to use setKeymap()
	* funcname.tab (DEFINE_KEY): added
	* main.c (MAIN): initKeymap(TRUE)
		(defKey): added
	* proto.h (defKey): added
		(setKeymap): added
		(initKeymap): add force param
	* rc.c (CMT_KEYMAP_FILE): added
		(params3): add keymap_file
		(sync_with_option): add initKeymap(FALSE)
	* doc/README.func (DEFINE_KEY): added
	* doc-jp/README.func: (DEFINE_KEY): added
	* scripts/w3mhelp.cgi.in: add defKey
	* NEWS:
		func: DEFINE_KEY
		rc: keymap_file

2002-06-02  Hiroaki Shimotsu <shim@d5.bs1.fc.nec.co.jp>

	* [w3m-dev 03196] C-w
	* linein.c (inputLineHistSearch) move_word changed
	* linein.c (setStrType): add space to termchar

2002-05-15  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 03191] typo in file.c:extract_auth_val()?
	* file.c (extract_auth_val): s/177/0177/

2002-05-15  Tsutomu OKADA <okada@furuno.co.jp>

	* [w3m-dev 03190] a tiny patch for configure
	* configure (ask_choice): reset default value

2002-04-27  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 03185] Re: cmd_mark in main.c, rev 1.60 broke unmark?
	* main.c (cmd_mark): deleted
		(_mark): xor PE_MARK
		(reMark): or PE_MARK

2002-04-27  Fumitoshi UKAI  <ukai@debian.or.jp>

	* scripts/.cvsignore: add xface2xpm

2002-04-26  Tushar Samant <scribble@pobox.com>
	
	* [w3m-dev-en 00733] Submission: "English" patch
	* rc.c: update english
